--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -112,7 +112,7 @@ body {
 
     &__description {
         color: #fff;
-        font-size: 1.9rem;
+        font-size: 2rem;
     }
 }
 
